5505 fix image on Safari

--- a/apps/catalog/catalog/src/app/landing/landing.component.scss
+++ b/apps/catalog/catalog/src/app/landing/landing.component.scss
@@ -23,6 +23,7 @@ landing-content {
     img {
       max-width: 600px;
       width: 100%;
+      height: 100%;
     }
   }
 
